--- a/Lended/Base.lproj/Main.storyboard
+++ b/Lended/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,11 +19,11 @@
                         <viewControllerLayoutGuide type="bottom" id="44Z-yS-xhE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XNC-rg-pdZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zsb-Gb-QAR">
-                                <rect key="frame" x="25" y="89" width="364" height="622"/>
+                                <rect key="frame" x="25" y="89" width="325" height="553"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="86q-LR-8dd">
                                     <size key="itemSize" width="211" height="211"/>
@@ -33,7 +33,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="accountCell" id="woJ-uD-moW" customClass="AccountCollectionViewCell" customModule="Lended" customModuleProvider="target">
-                                        <rect key="frame" x="76.666666666666671" y="0.0" width="211" height="211"/>
+                                        <rect key="frame" x="57" y="0.0" width="211" height="211"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="211" height="211"/>
@@ -95,20 +95,20 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sd3-Eh-O6n">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAM-Me-e4A">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XuJ-OW-SMe">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="376.33333333333331"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="325.5"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wv6-un-EKP">
-                                                        <rect key="frame" x="354" y="45" width="35" height="35"/>
+                                                        <rect key="frame" x="315" y="45" width="35" height="35"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="35" id="cMN-i9-tZA"/>
@@ -119,25 +119,35 @@
                                                             <action selector="questionMarkButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZTc-Sx-sOO"/>
                                                         </connections>
                                                     </button>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoAlt" translatesAutoresizingMaskIntoConstraints="NO" id="Uh5-Lx-uhx">
+                                                        <rect key="frame" x="86" y="61" width="203" height="203"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="Uh5-Lx-uhx" secondAttribute="height" multiplier="1:1" id="Q0Q-Ad-ao9"/>
+                                                        </constraints>
+                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="1" green="1" blue="0.96883370535714286" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
+                                                    <constraint firstItem="Uh5-Lx-uhx" firstAttribute="centerX" secondItem="XuJ-OW-SMe" secondAttribute="centerX" id="hgq-In-oFZ"/>
                                                     <constraint firstItem="Wv6-un-EKP" firstAttribute="top" secondItem="XuJ-OW-SMe" secondAttribute="top" constant="45" id="ip2-Gd-o7g"/>
+                                                    <constraint firstItem="Uh5-Lx-uhx" firstAttribute="centerX" secondItem="XuJ-OW-SMe" secondAttribute="centerX" id="nT9-rH-DZH"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Uh5-Lx-uhx" secondAttribute="trailing" constant="86" id="oYz-Jo-9ZT"/>
                                                     <constraint firstAttribute="trailing" secondItem="Wv6-un-EKP" secondAttribute="trailing" constant="25" id="rht-Th-cuY"/>
+                                                    <constraint firstItem="Uh5-Lx-uhx" firstAttribute="centerY" secondItem="XuJ-OW-SMe" secondAttribute="centerY" id="x6D-qi-T52"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3q-Jf-3Fo">
-                                                <rect key="frame" x="0.0" y="376.33333333333337" width="207" height="165.00000000000011"/>
+                                                <rect key="frame" x="0.0" y="325.5" width="187.5" height="165"/>
                                                 <color key="backgroundColor" red="0.34718981385231018" green="0.51570582389831543" blue="0.78047454357147217" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="165" id="f5w-VI-v6I"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zax-9L-Kr2">
-                                                <rect key="frame" x="207" y="376.33333333333337" width="207" height="165.00000000000011"/>
+                                                <rect key="frame" x="187.5" y="325.5" width="187.5" height="165"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTg-DE-q9c">
-                                                        <rect key="frame" x="56" y="15" width="95" height="95"/>
+                                                        <rect key="frame" x="46.5" y="15" width="95" height="95"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="lTg-DE-q9c" secondAttribute="height" multiplier="1:1" id="g8n-1G-UbU"/>
                                                         </constraints>
@@ -147,7 +157,7 @@
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OhG-c7-TUh">
-                                                        <rect key="frame" x="50.333333333333314" y="115" width="105.33333333333337" height="35.000000000000057"/>
+                                                        <rect key="frame" x="40.5" y="115" width="106" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="35" id="b90-MK-CYE"/>
                                                         </constraints>
@@ -166,10 +176,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9g-Vb-dkF">
-                                                <rect key="frame" x="0.0" y="541.33333333333348" width="414" height="194.66666666666663"/>
+                                                <rect key="frame" x="0.0" y="490.5" width="375" height="176.5"/>
                                                 <subviews>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T4b-mV-epQ">
-                                                        <rect key="frame" x="50" y="25" width="314" height="39.666666666666629"/>
+                                                        <rect key="frame" x="50" y="25" width="275" height="33.5"/>
                                                         <color key="backgroundColor" red="0.75788218975067134" green="0.51088512245654527" blue="0.4428841336148378" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
@@ -179,7 +189,7 @@
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qaH-PS-Gh8">
-                                                        <rect key="frame" x="50" y="74.666666666666629" width="314" height="39.666666666666629"/>
+                                                        <rect key="frame" x="50" y="68.5" width="275" height="34"/>
                                                         <color key="backgroundColor" red="0.75788218979999999" green="0.51088512249999996" blue="0.44288413360000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
@@ -189,10 +199,10 @@
                                                         </connections>
                                                     </textField>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M5e-cC-Bpy">
-                                                        <rect key="frame" x="50" y="129.33333333333326" width="314" height="40.333333333333371"/>
+                                                        <rect key="frame" x="50" y="117.5" width="275" height="34"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DZw-NG-zMR">
-                                                                <rect key="frame" x="2" y="2" width="310" height="36.333333333333371"/>
+                                                                <rect key="frame" x="2" y="2" width="271" height="30"/>
                                                                 <color key="backgroundColor" red="0.78664588928222656" green="0.48777267336845398" blue="0.39216765761375427" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="15"/>
                                                                 <state key="normal" title="SIGN IN">
@@ -288,7 +298,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="428.98550724637687" y="151.63043478260872"/>
+            <point key="canvasLocation" x="428" y="151.57421289355324"/>
         </scene>
         <!--Item-->
         <scene sceneID="gsg-vr-q7D">
@@ -318,8 +328,16 @@
                         <viewControllerLayoutGuide type="bottom" id="n5Z-KF-AQB"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4Br-bh-XMA">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s7o-c4-8PY">
+                                <rect key="frame" x="49" y="557" width="276" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="LVd-gb-JyF"/>
@@ -329,7 +347,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wDs-Xu-toP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-716" y="1926"/>
+            <point key="canvasLocation" x="-717.39130434782612" y="1925.5434782608697"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="832-ly-51V">
@@ -351,11 +369,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="LogoAlt" width="300" height="300"/>
         <image name="Plus" width="125" height="125"/>
-        <image name="whiteQuestionMark" width="53" height="52"/>
+        <image name="whiteQuestionMark" width="53" height="53"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="rJb-Oo-b0r"/>
-        <segue reference="B3Q-CC-j6s"/>
+        <segue reference="Hri-iF-2q5"/>
     </inferredMetricsTieBreakers>
 </document>
