--- a/Lended/Base.lproj/LaunchScreen.storyboard
+++ b/Lended/Base.lproj/LaunchScreen.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logolarge" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-Ck-GCe">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.840576171875" green="0.46434685587882996" blue="0.36077871918678284" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
@@ -31,7 +31,7 @@
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Rlj-Ck-GCe" secondAttribute="bottom" id="2CO-Cn-bhK"/>
                             <constraint firstItem="Rlj-Ck-GCe" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="2Rl-I7-PjS"/>
                             <constraint firstAttribute="trailing" secondItem="Rlj-Ck-GCe" secondAttribute="trailing" id="Lel-by-xU1"/>
-                            <constraint firstItem="Rlj-Ck-GCe" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="v2L-Gj-QJ0"/>
+                            <constraint firstItem="Rlj-Ck-GCe" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="v2L-Gj-QJ0"/>
                         </constraints>
                     </view>
                 </viewController>
